# corelib

./: Dockerfile  pyproject.toml
corelib/: config.py  security.py
corelib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: update_openapi.sh
src/corelib/: __init__.py  api.py  app.py  config.py  database.py  db.py  engine.py  models.py  schema.py  security.py  services.py  types.py  utils.py
src/corelib/api/: __init__.py  core.py  router.py
src/corelib/db/: __init__.py  crud.py  session.py
src/corelib/services/fro_auth_users_service_client/: __init__.py
src/corelib/services/fro_auth_users_service_client/models/: __init__.py  auth_code_request.py  body_login_login_access_token.py  new_password.py  private_user_create.py  update_password.py  user_create.py  user_public.py  user_register.py  user_update.py  user_update_me.py  users_public.py
src/corelib/services/fro_deals_service_client/: __init__.py
src/corelib/services/fro_deals_service_client/models/: __init__.py  contact_create.py  contact_delete.py  contact_public.py  contact_update.py  customer_create.py  customer_delete.py  customer_public.py  customer_update.py  deal_create.py  deal_create_fields.py  deal_delete.py  deal_public.py  deal_public_fields.py  deal_update.py  deal_update_fields.py  field_create.py  field_delete.py  field_public.py  field_types.py  field_update.py  json_response_model_contact_delete.py  json_response_model_contact_public.py  json_response_model_customer_delete.py  json_response_model_customer_public.py  json_response_model_deal_delete.py  pipedrive_deal.py  (+18 more)
(+47 files in other folders)
