[project]
name = "corelib"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hugo Brandão", email = "hrbrandao@proton.me" }
]
requires-python = ">=3.10"
dependencies = ["pyjwt (>=2.10.1,<3.0.0)", "passlib (>=1.7.4,<2.0.0)"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/corelib"]
