[project]
name = "corelib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hugo Brandão", email = "hrbrandao@proton.me" }
]
requires-python = ">=3.10"
dependencies = ["requests (>=2.32.5,<3.0.0)"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
